--- a/HTML-PC/css/scss/_var.scss
+++ b/HTML-PC/css/scss/_var.scss
@@ -3,7 +3,7 @@ $url: "images" !default;
 
 :root {
   --yellow: #e0ad1f;
-  --orange: #B76E23;
+  --orange: #F9AC4E;
   --green: #089256;
   --blue: #076DB6;
   --white: #fff;
@@ -19,12 +19,12 @@ $url: "images" !default;
   --bg-agray: #f7f7f7;
   --bg-agray1: #E5E5E5;
   --bg-agray2: #F6F7FB;
-  --font1: 'Roboto', sans-serif;
-  --blue700: #00234B;
+  --font1: 'BROmegaVN';
+  --blue700: #17677B;
   --blue600: #1C2F6E;
-  --blue500: #274C98;
+  --blue500: #129AB2;
   --gray200: #D2D7E1;
-  --gray100: #E3E7EF;
+  --gray100: #A9A9A9;
   --gray50: #F3F5F8;
   --border: #D2D7E1;
 }
