--- a/HTML-PC/app/template/main.html
+++ b/HTML-PC/app/template/main.html
@@ -15,13 +15,13 @@
     <link type="image/x-icon" href="http://ssl.gstatic.com/docs/doclist/images/infinite_arrow_favicon_5.ico"
         rel="shortcut icon" />
     <link rel="stylesheet" href="css/fontAwesome/css/font-awesome.min.css" media="all" />
-    <link rel="stylesheet" href="css/bootstrap.css" media="all" />
+    <link rel="stylesheet" href="css/bootstrap.min.css" media="all" />
     <link rel="stylesheet" href="css/style.css" media="all" />
 
     <!--Jquery lib-->
     <script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
     <script type="text/javascript" src="js/swiper.min.js"></script>
-    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/bootstrap.bundle.min.js"></script>
     <script type="text/javascript" src="js/common.js"></script>
     <!-- build:script -->
     <!-- build:script2 -->
@@ -31,53 +31,6 @@
 </head>
 
 <body class="homepage">
-    <section class="top-header">
-        <div class="container">
-            <div class="left">
-                <a href="#"><i class="fa fa-facebook"></i></a>
-                <a href="#"><i class="fa fa-twitter"></i></a>
-                <a href="#"><i class="fa fa-linkedin"></i></a>
-            </div>
-            <div class="right">
-                <div class="search-btn">
-                    <a href="javarscript:;" class="auto_search_button">
-                        <svg class="icon-svg">
-                            <use xlink:href="images/icons/icon.svg#search"></use>
-                        </svg>
-                        <svg class="icon-svg close">
-                            <use xlink:href="images/icons/icon.svg#close"></use>
-                        </svg>
-                    </a>
-                    <div class="search-wrap" style="display: none;">
-                        <input type="text" class="search-wrap-input" placeholder="Nhập nội dung...">
-                        <button type="submit" value="">
-                            <svg class="icon-svg">
-                                <use xlink:href="images/icons/icon.svg#search"></use>
-                            </svg>
-                        </button>
-                    </div>
-                </div>
-                <ul class="nav">
-                    <li>
-                        <a href="">Về chúng tôi</a>
-                    </li>
-                    <li>
-                        <a href="">Liên hệ</a>
-                    </li>
-                    <li>
-                        <a href="">Đăng ký nhận bản tin</a>
-                    </li>
-                </ul>
-                <a href="#" class="languages">
-                    <svg class="icon-svg">
-                        <use xlink:href="images/icons/icon.svg#lang"></use>
-                    </svg>
-                    <span>Tiếng Việt</span>
-                </a>
-            </div>
-        </div>
-
-    </section>
     <section id="navbar" class="topnav">
         <div class="container">
             <div class="flex flex_row">
@@ -123,84 +76,14 @@
     <!--Footer-->
     <footer class="footer">
         <div class="container">
-            <div class="grid grid__4">
-                <div class="col">
-                    <a class="logo" href="#" title="#"><img src="images/graphics/logo-white.svg" alt=""></a>
-                </div>
-                <div class="col">
-                    <h3 class="title">Tin tức</h3>
-                    <ul>
-                        <li><a href="#">Văn bản pháp luật</a></li>
-                        <li><a href="#">Hỗ trợ xuất nhập khẩu</a></li>
-                        <li><a href="#">Xuất khẩu 4.0</a></li>
-                        <li><a href="#">Câu chuyện xuất nhật khẩu thành công</a></li>
-                    </ul>
-                </div>
-                <div class="col">
-                    <h3 class="title">Về chúng tôi</h3>
-                    <ul>
-                        <li><a href="#">Giới thiệu</a></li>
-                        <li><a href="#">Liên hệ</a></li>
-                    </ul>
-                </div>
-                <div class="col">
-                    <h3 class="title">Pháp lý</h3>
-                    <ul>
-                        <li><a href="#">Các điều khoản và điều kiện</a></li>
-                        <li><a href="#">Chính sách bảo mật</a></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-        <div class="copy_right">
-            <div class="container">
-                <div class="flex colum">
-                    <div>Copyright © NewCA. All rights reserved.</div>
-                    <div class="social ">
-                        <a href="#"><i class="fa fa-facebook"></i></a>
-                        <a href="#"><i class="fa fa-twitter"></i></a>
-                        <a href="#"><i class="fa fa-linkedin"></i></a>
-                    </div>
-                </div>
-            </div>
+
         </div>
     </footer>
     <!--End Footer-->
-
-    <!-- Popup Đăng nhập -->
-    <div class="modal modal-login fade" id="popuplogin">
-        <div class="modal-dialog">
-            <div class="modal-content">
-
-                <!-- Modal Header -->
-                <div class="modal-header">
-                    <h4 class="modal-title">Đăng nhập</h4>
-                    <p>Vòng lòng đăng nhập bằng Gmail</p>
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                </div>
-                <!-- Modal body -->
-                <div class="modal-body detail_tin">
-                    <div class="form-group relative">
-                        <img class="icon" src="images/icons/google.svg" alt="">
-                        <input type="text" class="form-control login" id="" placeholder="Đăng nhập với Gmail">
-                    </div>
-
-
-                </div>
-
-
-            </div>
-        </div>
-    </div>
-
-
-    <div class="overlay-bg"></div>
     <!--Back to top-->
     <a href="javascript:;" id="to_top">
         <i class="fa fa-long-arrow-up"></i>
     </a>
-
-    <!--End Lightbox thông báo-->
 </body>
 
 </html>
