--- a/HTML-PC/css/scss/style.scss
+++ b/HTML-PC/css/scss/style.scss
@@ -1,15 +1,13 @@
 @charset "utf-8";
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
 @import "var.scss";
 @import "reset.scss";
-@import "fonts/iconfont/iconfont.css";
+@import "font.scss";
 @import "common.scss";
 @import "placeholder.scss";
 
 //Plugin
-@import "modal.scss";
+// @import "modal.scss";
 @import "swiper.scss";
-// @import "slider-range.scss";
 
 //Box template
 @import "header.scss";
