--- a/HTML-PC/app/template/main.html
+++ b/HTML-PC/app/template/main.html
@@ -3,8 +3,7 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <meta name="viewport"
-        content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=yes">
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=yes">
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-title" content="" />
     <meta name="description" content="content">
@@ -12,20 +11,10 @@
     <title>
         <!-- build:title -->
     </title>
-    <link type="image/x-icon" href="http://ssl.gstatic.com/docs/doclist/images/infinite_arrow_favicon_5.ico"
-        rel="shortcut icon" />
+    <link type="image/x-icon" href="http://ssl.gstatic.com/docs/doclist/images/infinite_arrow_favicon_5.ico" rel="shortcut icon" />
     <link rel="stylesheet" href="css/fontAwesome/css/font-awesome.min.css" media="all" />
     <link rel="stylesheet" href="css/bootstrap.min.css" media="all" />
     <link rel="stylesheet" href="css/style.css" media="all" />
-
-    <!--Jquery lib-->
-    <script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
-    <script type="text/javascript" src="js/swiper.min.js"></script>
-    <script type="text/javascript" src="js/bootstrap.bundle.min.js"></script>
-    <script type="text/javascript" src="js/common.js"></script>
-    <!-- build:script -->
-    <!-- build:script2 -->
-
     <!-- build:head2 -->
     <!-- build:head -->
 </head>
@@ -34,19 +23,22 @@
     <section id="navbar" class="topnav">
         <div class="container">
             <div class="flex flex_row">
-                <h1 class="logo" title="new-ca">
-                    <a href="#"><img src="images/graphics/logo.svg" alt=""></a>
-                </h1>
-                <div class="right_menu">
+                <div class="left_menu">
                     <a href="javascript:;" id="vibeji-ham" class="item"><span></span> <span></span> <span></span></a>
                     <div class="flex flex_right">
                         <div class="main-menu">
                             <ul class="nav">
+                                <li>
+                                    <a class="logo" title="new-ca" href="#"><img class="logo-dark" src="images/graphics/logo.svg" alt=""><img class="logo-white" src="images/graphics/logo-white.svg" alt=""></a>
+                                </li>
                                 <li class="active">
-                                    <a href="#">Trang chủ</a>
+                                    <a href="#">Tìm việc</a>
+                                </li>
+                                <li>
+                                    <a href="#">Công ty</a>
                                 </li>
                                 <li class="default">
-                                    <a href="#">Văn bản pháp luật</a>
+                                    <a href="#">Blog</a>
                                     <span class="sub_menu">+</span>
                                     <div class="level2">
                                         <a href="#">Giới thiệu</a>
@@ -55,17 +47,18 @@
                                     </div>
                                 </li>
                                 <li>
-                                    <a href="#">Hỗ trợ xuất nhập khẩu</a>
+                                    <a href="#">Giới thiệu</a>
                                 </li>
                                 <li>
-                                    <a href="#">Xuất khẩu 4.0</a>
-                                </li>
-                                <li>
-                                    <a href="#">Câu chuyện thành công</a>
+                                    <a href="#">Liên hệ</a>
                                 </li>
                             </ul>
                         </div>
                     </div>
+                </div>
+                <div class="right_menu">
+                    <a class="btn-default">Cộng tác viên</a>
+                    <a class="btn-default none">Nhà tuyển dụng</a>
                 </div>
             </div>
         </div>
@@ -84,6 +77,15 @@
     <a href="javascript:;" id="to_top">
         <i class="fa fa-long-arrow-up"></i>
     </a>
+
+    <!--Jquery lib-->
+    <script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
+    <script type="text/javascript" src="js/swiper.min.js"></script>
+    <script type="text/javascript" src="js/bootstrap.bundle.min.js"></script>
+    <script type="text/javascript" src="js/common.js"></script>
+    <!-- build:script -->
+    <!-- build:script2 -->
+
 </body>
 
 </html>
